--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,48 @@
 [build-system]
-requires = [
-    "setuptools >= 45",
-    "wheel",
-    "setuptools_scm[toml] >= 6.2",
-    "setuptools_scm_git_archive",
-]
-build-backend = "setuptools.build_meta"
+build-backend = "mesonpy"
+requires = ["meson-python"]
 
-[tool.setuptools_scm]
-write_to = "fprettify/_version.py"
+[project]
+name = "fprettify"
+version = "0.3.7"
+readme = "README.md"
+license = { text = "GPL-3.0-or-later" }
+requires-python = '>=3.10'
+authors = [{name = "Patrick Seewald", email = "patrick.seewald@gmail.com"}]
+maintainers = [
+    { name = "Patrick Seewald", email = "patrick.seewald@gmail.com" },
+]
+keywords = [ "fortran", "formatter" ]
+description = "auto-formatter for modern fortran source code."
+
+[project.urls]
+homepage = "https://github.com/fortran-lang/fprettify"
+repository = "https://github.com/fortran-lang/fprettify"
+"Bug Tracker" = "https://github.com/fortran-lang/fprettify/issues"
+
+[project.scripts]
+fprettify = "fprettify.cli:run"
 
 [tool.isort]
 profile = "black"
+
+[dependency-groups]
+dev = [
+    "build>=1.4.0",
+    "gitpython>=3.1.46",
+    "pyright>=1.1.408",
+    "ruff>=0.15.2",
+]
+
+[tool.ruff]
+line-length = 130
+
+[tool.ruff.lint]
+select = ["D", "E", "F", "I"]
+ignore = ["F403", "D211", "D212", "D200", "D203", "D401", "D404", "D205", "D400", "D415"]
+
+[tool.pyright]
+include = ["wrfrun"]
+pythonVersion = "3.10"
+pythonPlatform = "Linux"
+reportArgumentType = false
